--- a/app/src/main/res/layout/exercise_writing.xml
+++ b/app/src/main/res/layout/exercise_writing.xml
@@ -21,12 +21,14 @@
 
     <EditText
         android:id="@+id/user_input"
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="EditText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label" />
 
