--- a/app/src/main/res/menu/menu_tabbed.xml
+++ b/app/src/main/res/menu/menu_tabbed.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mstniy.kelimeezber.TabbedActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_sort"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_sort"
         app:showAsAction="never" />
 </menu>
