Refactored relevant parts of ExerciseFragment into MCFragment and WritingFragment

--- a/app/src/main/res/layout/fragment_mc.xml
+++ b/app/src/main/res/layout/fragment_mc.xml
@@ -7,7 +7,7 @@
     tools:context=".ExerciseFragment">
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/labelMC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button1"
         app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label"
+        app:layout_constraintTop_toBottomOf="@+id/labelMC"
         app:layout_constraintVertical_bias="0.518" />
 
     <Button
@@ -44,7 +44,7 @@
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label"
+        app:layout_constraintTop_toBottomOf="@+id/labelMC"
         app:layout_constraintVertical_bias="0.518" />
 
     <Button
