--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.mstniy.kelimeezber.TabbedActivity">
+    tools:context="com.mstniy.kelimeezber.DrawerActivity">
     <item
         android:id="@+id/action_sort"
         android:orderInCategory="100"
