Added new exercise types: "new" and "random". AddWordActivity now refuses to add the pair if it already exists. Dublicate pairs can cause the app to crash if one is deleted and the other gets chosen as the exercise pair.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,4 +4,10 @@
         <item>Lexicographical</item>
         <item>Hardness</item>
     </array>
+
+    <array name="exerciseTypeArray">
+        <item>Smart</item>
+        <item>New</item>
+        <item>Random</item>
+    </array>
 </resources>
