Wordlist now sorts words according to their period, not hardness

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <array name="sortByArray">
         <item>Lexicographical</item>
-        <item>Hardness</item>
+        <item>Period</item>
     </array>
 
     <array name="exerciseTypeArray">
