--- a/app/src/main/res/layout/word_list_item.xml
+++ b/app/src/main/res/layout/word_list_item.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_view_hardness"
+        android:id="@+id/text_view_period"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
