Add statistics page Bug fixes

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,4 +6,6 @@
             android:title="@string/drawer_exercise" />
         <item android:id="@+id/drawer_list"
             android:title="@string/drawer_list" />
+        <item android:id="@+id/drawer_stats"
+            android:title="@string/drawer_stats" />
 </menu>
