--- a/app/src/main/res/layout/fragment_writing.xml
+++ b/app/src/main/res/layout/fragment_writing.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ExerciseFragment"
-    tools:layout_editor_absoluteY="81dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/label"
@@ -17,69 +13,62 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.10" />
 
     <EditText
         android:id="@+id/user_input"
-        android:layout_width="317dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="EditText"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/backspace_button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label" />
-
-    <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/letter_table"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:layout_marginTop="16dp"
-        app:alignContent="flex_start"
-        app:alignItems="flex_start"
-        app:flexWrap="wrap"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/backspace_button"
-        app:layout_constraintTop_toBottomOf="@+id/user_input"
-        app:layout_constraintVertical_bias="0.0">
-
-    </com.google.android.flexbox.FlexboxLayout>
-
-    <Button
-        android:id="@+id/hint_button"
-        android:layout_width="59dp"
-        android:layout_height="59dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:drawableLeft="@android:drawable/ic_menu_compass"
-        android:minWidth="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/letter_table" />
-
-    <TextView
-        android:id="@+id/hint_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/hint_button"
-        app:layout_constraintTop_toBottomOf="@+id/letter_table" />
+        android:layout_marginRight="24dp"
+        android:text="EditText"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label" />
 
     <Button
         android:id="@+id/backspace_button"
         android:layout_width="59dp"
         android:layout_height="59dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:drawableStart="@android:drawable/ic_input_delete"
         android:minWidth="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_input" />
 
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/letter_table"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        app:alignContent="flex_start"
+        app:alignItems="flex_start"
+        app:flexWrap="wrap"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/backspace_button"
+        app:layout_constraintTop_toBottomOf="@+id/user_input" />
 
+    <Button
+        android:id="@+id/hint_button"
+        android:layout_width="59dp"
+        android:layout_height="59dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:drawableStart="@android:drawable/ic_menu_compass"
+        android:minWidth="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/letter_table" />
+    <TextView
+        android:id="@+id/hint_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toEndOf="@+id/hint_button"
+        app:layout_constraintTop_toBottomOf="@+id/letter_table" />
 </android.support.constraint.ConstraintLayout>
