--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-        <item android:id="@+id/drawer_exercise"
-            android:title="@string/drawer_exercise" />
-        <item android:id="@+id/drawer_list"
-            android:title="@string/drawer_list" />
-        <item android:id="@+id/drawer_stats"
-            android:title="@string/drawer_stats" />
+    <item
+        android:id="@+id/drawer_exercise"
+        android:title="@string/drawer_exercise" />
+    <item
+        android:id="@+id/drawer_list"
+        android:title="@string/drawer_list" />
+    <item
+        android:id="@+id/drawer_stats"
+        android:title="@string/drawer_stats" />
 </menu>
