--- a/app/src/main/res/menu/menu_exercise.xml
+++ b/app/src/main/res/menu/menu_exercise.xml
@@ -1,10 +1,8 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.mstniy.kelimeezber.TabbedActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
     <item
-        android:id="@+id/action_exercisetype"
+        android:id="@+id/action_selectiontype"
         android:orderInCategory="100"
-        android:title="@string/action_exercisetype"
+        android:title="@string/action_selectiontype"
         app:showAsAction="never" />
 </menu>
