--- a/app/src/main/res/menu/menu_exercise.xml
+++ b/app/src/main/res/menu/menu_exercise.xml
@@ -5,4 +5,9 @@
         android:orderInCategory="100"
         android:title="@string/action_selectiontype"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_datasetpath"
+        android:orderInCategory="200"
+        android:title="@string/action_datasetpath"
+        app:showAsAction="never" />
 </menu>
