Made Listening into a seperate fragment from exercise.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,9 @@
         android:id="@+id/drawer_list"
         android:title="@string/drawer_list" />
     <item
+        android:id="@+id/drawer_listening"
+        android:title="@string/drawer_listening" />
+    <item
         android:id="@+id/drawer_stats"
         android:title="@string/drawer_stats" />
 </menu>
