Removed the menu from the ListeningFragment. It didn't work, anyways.

--- a/app/src/main/res/layout/fragment_listening.xml
+++ b/app/src/main/res/layout/fragment_listening.xml
@@ -27,7 +27,7 @@
         app:flexWrap="wrap"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/replay_button" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:id="@+id/word_box_options"
