--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -18,7 +18,9 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edit0"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" >
+            <requestFocus/>
+        </android.support.design.widget.TextInputEditText>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
