--- a/app/src/main/res/layout/exercise_fragment_frame.xml
+++ b/app/src/main/res/layout/exercise_fragment_frame.xml
@@ -5,16 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <ImageView
         android:id="@+id/mute_button"
+        style="@style/BlueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
         android:minWidth="0dp"
+        android:tint="#ffffff"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
     <FrameLayout
         android:id="@+id/exercise_fragment_frame"
