--- a/app/src/main/res/layout/fragment_mc.xml
+++ b/app/src/main/res/layout/fragment_mc.xml
@@ -19,10 +19,15 @@
 
     <Button
         android:id="@+id/button0"
+        style="@style/BlueButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:text="Button"
+        android:textAllCaps="true"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/ButtonBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.18"
         app:layout_constraintHorizontal_bias="0.1"
@@ -34,10 +39,15 @@
 
     <Button
         android:id="@+id/button1"
+        style="@style/BlueButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:text="Button"
+        android:textAllCaps="true"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/ButtonBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.18"
         app:layout_constraintHorizontal_bias="0.9"
@@ -49,9 +59,14 @@
 
     <Button
         android:id="@+id/button2"
+        style="@style/BlueButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="Button"
+        android:textAllCaps="true"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/ButtonBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.18"
         app:layout_constraintHorizontal_bias="0.1"
@@ -63,9 +78,14 @@
 
     <Button
         android:id="@+id/button3"
+        style="@style/BlueButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="Button"
+        android:textAllCaps="true"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/ButtonBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.18"
         app:layout_constraintHorizontal_bias="0.9"
