--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="BlueButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@color/ButtonBlue</item>
+    </style>
+
 </resources>
