Added matching exercises   Known issues:     returning to the exercise tab chooses a new exercise     matching exercise does not save its state properly     Using serializable for storing Pair-s creates duplicates

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="ButtonBlue">#0098ec</color>
+    <color name="ButtonBlueHighlight">#0267A0</color>
+    <color name="ButtonBlueDisabled">#C8DCE7</color>
 </resources>
