Option to sort pairs by order of creation

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,5 +8,6 @@
     <array name="sortByArray">
         <item>Lexicographical</item>
         <item>Period</item>
+        <item>Recent</item>
     </array>
 </resources>
