Improve mathcing exercises   Provide hints on wrong answers   Use isACorrectAnswer rather than blind pair id matching

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="ButtonBlue">#0098ec</color>
     <color name="ButtonBlueHighlight">#0267A0</color>
     <color name="ButtonBlueDisabled">#C8DCE7</color>
+    <color name="ButtonHint">#F33345</color>
 </resources>
